OpenDNSSEC 1.4.9 - 2016-01-21

Bugfixes:
 * Add TCP waiting queue. Fix signer getting 'stuck' when adding many zones
   at once. Thanks to Havard Eidnes to bringing this to our attention.
 * OPENDNSSEC-723: received SOA serial reported as on disk.
 * Fix potential locking issue on SOA serial.
 * Crash on shutdown. At all times join xfr and dns handler threads.
 * Make handling of notifies more consistent. Previous implementation would
   bounce between code paths.

Known Issues:
 * When using SoftHSM2 compiled with OpenSSL, and libmysql with OpenSSL as 
   database backend for OpenDNSSEC. "ods-ksmutil key list --verbose" crashes 
   on exit. This is ultimately a bug in OpenSSL and not new for this particular 
   release. Make sure you don't use this specific combination.

OpenDNSSEC 1.4.8 - 2015-09-24

* Support for RFC5011 style KSK rollovers. KSK section in the KASP now 
  accepts <RFC5011/> element.
* Enforcer: New repository option <AllowExtraction/> allows to generate keys
  with CKA_EXTRACTABLE attribute set to TRUE so keys can be wrapped
  and extracted from HSM.

Bugfixes:
* SUPPORT-145: EOF handling an ARM architecture caused signer to hang.
* Fixed signer hitting assertion on short reply XFR handler.
* Include revoke bit in keytag calculation.
* Increased stacksize on some systems (thanks Patrik Lundin!).
* Stop ods-signerd on SIGINT.

OpenDNSSEC 1.4.7 - 2014-12-04

Bugfixes:
* SUPPORT-147: Zone updating via zone transfer can get stuck (Håvard Eidnes)
* Crash on 'retransfer command when not using DNS adapters.


OpenDNSSEC 1.4.6 - 2014-07-21

* Signer Engine: Print secondary server address when logging notify reply
  errors.
* Build: Fixed various OpenBSD compatibility issues found by Patrik Lundin
  <patrik.lundin.swe () gmail.com>.
* OPENDNSSEC-621: conf.xml: New options: <PidFile> for both enforcer and
  signer, and <SocketFile> for the signer.
* New tool: ods-getconf: to retrieve a configuration value from conf.xml
  given an expression.

Bugfixes: